Fix for horizontal scrollbar not displaying

--- a/src/components/tree-view/tree-view-item/tree-view-item.scss
+++ b/src/components/tree-view/tree-view-item/tree-view-item.scss
@@ -39,7 +39,7 @@ $own-offset: calc(
 
   display: grid;
   grid-template-rows: min-content;
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 .header {
